--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,14 +2,15 @@ Package: psadd
 Type: Package
 Title: Additions to phyloseq package for microbiome analysis
 Version: 0.1.0
-Author: Charlie PAUVERT
-Maintainer: Charlie PAUVERT
-Description: 
-	This package contains customs functions and additions to the phyloseq package.
-Instead of sharing functions scripts, I bundled functions and their documentation into this package for the sake of clarity and re-usability.
+Author: Charlie PAUVERT <charlie.pauvert@u-bordeaux.fr>
+Maintainer: Charlie PAUVERT <charlie.pauvert@u-bordeaux.fr>
+Description: This package contains customs functions and additions to the
+    phyloseq package. Instead of sharing functions scripts, I bundled functions and
+    their documentation into this package for the sake of clarity and re-usability.
 License: AGPL-3
 LazyData: TRUE
 Imports:
     phyloseq (>= 1.18.0),
     plotrix (>= 3.6-3),
     vegan (>= 2.3.5)
+RoxygenNote: 5.0.1
