New sample_stats function. Small edits to taxa_stats doc.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(plot_pie_with_legend)
 export(plot_sparsity)
 export(relative_abd_without_specific_sample)
 export(relative_abundance)
+export(sample_stats)
 export(subset_samples_no_zero)
 export(taxa_stats)
 import(ggplot2)
