Violin plot to check samples sequence number distribution

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(plot_pie)
 export(plot_pie_vector)
 export(plot_pie_with_legend)
 export(plot_sparsity)
+export(plot_violin)
 export(relative_abd_without_specific_sample)
 export(relative_abundance)
 export(sample_stats)
