Update import for several functions to correct warnings

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,9 +10,21 @@ export(plot_sparsity)
 export(plot_violin)
 export(relative_abd_without_specific_sample)
 export(relative_abundance)
+export(sample_prev)
 export(sample_stats)
 export(subset_samples_no_zero)
+export(taxa_prev)
 export(taxa_stats)
 import(ggplot2)
 import(phyloseq)
+importFrom(graphics,legend)
+importFrom(graphics,par)
+importFrom(graphics,pie)
+importFrom(phyloseq,prune_taxa)
+importFrom(phyloseq,subset_samples)
+importFrom(phyloseq,taxa_sums)
 importFrom(plotrix,floating.pie)
+importFrom(stats,aggregate)
+importFrom(stats,var)
+importFrom(utils,browseURL)
+importFrom(utils,write.table)
