Rename OTU function: from vsearch hash to rank abundance prefix

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(plot_sparsity)
 export(plot_violin)
 export(relative_abd_without_specific_sample)
 export(relative_abundance)
+export(rename_otu)
 export(sample_prev)
 export(sample_stats)
 export(subset_samples_no_zero)
@@ -22,6 +23,7 @@ importFrom(graphics,par)
 importFrom(graphics,pie)
 importFrom(phyloseq,prune_taxa)
 importFrom(phyloseq,subset_samples)
+importFrom(phyloseq,taxa_names)
 importFrom(phyloseq,taxa_sums)
 importFrom(plotrix,floating.pie)
 importFrom(stats,aggregate)
